--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,65 @@
-<html>
-    <head>
-        <title>This PR Is Too Big!</title>
-    </head>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <title>This PR Is Too Big!</title>
+           
+</head>
+
 
     <body>
-       Hello World!
+        <div class="container">
+            <div class="row">
+              <div class="col">
+                <h1>Human Computer Interaction Patterns</h1>
+                <table class="table table-striped">
+                    <thead>
+                      <tr>
+                        <th scope="col">Phase</th>
+                        <th scope="col">Human</th>
+                        <th scope="col">Robot</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th scope="row">Init</th>
+                        <td id="h1"></td>
+                        <td id="r1"></td>
+                      </tr>
+                      <tr>
+                        <th scope="row">Learn</th>
+                        <td id="h2"></td>
+                        <td id="r2"></td>
+                      </tr>
+                      <tr>
+                        <th scope="row">Constrain</th>
+                        <td id="h3"></td>
+                        <td id="r3"></td>
+                      </tr>
+                      <tr>
+                        <th scope="row">Create</th>
+                        <td id="h4"></td>
+                        <td id="r4"></td>
+                      </tr>
+                      <tr>
+                        <th scope="row">Select</th>
+                        <td id="h5"></td>
+                        <td id="r5"></td>
+                      </tr>
+                      <tr>
+                        <th scope="row">Iterate</th>
+                        <td id="h6"></td>
+                        <td id="r6"></td>
+                      </tr>
+                    </tbody>
+                  </table>  
+            </div>
+            </div>
+          </div>
     </body>
 </html>
