--- a/templates/index.html
+++ b/templates/index.html
@@ -13,10 +13,42 @@
 
 
     <body>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">This PR is Too Damn Big!</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link" href="https://www.bellotti.tech/effective-code-reviews">Code Reviews</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Coder Bootcamp Post Grad
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="https://www.bellotti.tech/deep-than-broad">Deep then Broad</a></li>
+                      <li><a class="dropdown-item" href="https://www.bellotti.tech/learn-cs-fundamentals">Learn CS Fundamentals</a></li>
+                      <li><a class="dropdown-item" href=" https://www.bellotti.tech/managing-impostor-syndrome">Managing Impostor Syndrome</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="https://bellotti.tech">More...</a></li>
+                    </ul>
+                  </li>
+                </ul>
+                </div>
+            </div>
+          </nav>
+
         <div class="container">
+            <div class="page-header">
+            <div class="row">
+                <div class="col"> <h1>Human Computer Interaction Patterns</h1></div>
+            </div>
+        </div>
             <div class="row">
               <div class="col">
-                <h1>Human Computer Interaction Patterns</h1>
                 <table class="table table-striped">
                     <thead>
                       <tr>
