--- a/templates/index.html
+++ b/templates/index.html
@@ -94,4 +94,9 @@
             </div>
           </div>
     </body>
+    <script src="static/js/load_data.js"></script>
+    <script>
+         data = ["{{item[0]}}", "{{item[1]}}", "{{item[2]}}", "{{item[3]}}", "{{item[4]}}", "{{item[5]}}"]
+        pick_and_set(data)
+    </script>
 </html>
