fixing grid around form

--- a/templates/index.html
+++ b/templates/index.html
@@ -92,8 +92,8 @@
                   </table>  
             </div>
             </div>
-          </div>
           <div class="row">
+            <div class="col">
             <form action="/submit" method="POST">
                 <h4>Name:</h4>
                 <input name="key" type="hidden" value="{{key}}"/>
@@ -102,7 +102,9 @@
             <textarea name="description" id="description"></textarea><br><br>
                 <input type="submit"/>
             </form>
+        </div>
           </div>
+        </div>
     </body>
     <script src="static/js/load_data.js"></script>
     <script>
