--- a/templates/index.html
+++ b/templates/index.html
@@ -95,12 +95,21 @@
           <div class="row">
             <div class="col">
             <form action="/submit" method="POST">
-                <h4>Name:</h4>
-                <input name="key" type="hidden" value="{{key}}"/>
-                <input name="name" id="name" type="text"><br><br>
-            <h4>Description:</h4>
-            <textarea name="description" id="description"></textarea><br><br>
-                <input type="submit"/>
+                <fieldset>
+                <div class="form-group">
+                    <label for="name" class="form-label mt-4">Name</label>
+                    <input name="key" type="hidden" value="{{key}}"/>
+                    <input class="form-control" name="name" id="name" type="text">
+                  </div>
+                  <div class="form-group">
+                    <label for="description" class="form-label mt-4">Description</label>
+                    <textarea class="form-control" name="description" id="description" rows="3"></textarea>
+                  </div>
+                </fieldset>
+            <fieldset class="form-group">
+                <input type="submit" class="btn btn-primary"/>
+                </div>
+            </fieldset>
             </form>
         </div>
           </div>
